--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_music_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,16 +9,29 @@
         android:id="@+id/textView_music_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/imageView"
+        android:fontFamily="casual"
         android:hint="title of music"
+        android:textColor="#000000"
         android:textSize="20sp"
-        android:textStyle="italic"
-        android:fontFamily="casual"/>
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/textView_music_artist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="artist "
+        android:layout_below="@id/textView_music_title"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/imageView"
         android:fontFamily="casual"
+        android:hint="artist "
+        android:textColor="#7C6D6D"
         android:textSize="16sp" />
-</LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView"
+
+        android:layout_width="65dp"
+        android:layout_height="65dp" />
+</RelativeLayout>
